[package]
name = "site-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
serde_json = { version = "1.0", features = ["preserve_order"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Clipboard", "Navigator", "Window"] }
serde.workspace = true
version = "3.0.0"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr", "leptos/tracing", "leptos_router/ssr", "leptos_meta/ssr",
  "dep:leptos_axum",
]
